# logico

./: .gitignore  README.md  WALKTHROUGH.md  logico.toml  pyproject.toml
app/: index.html  package.json
app/electron/: main.js  preload.js
app/src/: App.tsx  api.ts
app/src/components/: FilePicker.tsx  HistoryView.tsx  SyncView.tsx  WatchView.tsx
app/src/styles/: app.css
scripts/: build-all.sh  build-backend.ps1  build-backend.sh
src/logico/: __init__.py  cli.py  mapping.py  server.py  watcher.py
src/logico/dorico/: dtn.py  extractor.py  writer.py
src/logico/sync/: snapshot.py
